recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:2: error: identifier expected but integer literal found.
  avance(nbPas:100)
               ^FourSquare:7: error: ')' expected but '}' found.
}
^